# yoto-touch

./: .gitignore  AGENTS.md  Makefile  README.md
conductor/: esp32-optimizations.md  fix-image-rendering.md
firmware/: README.md
firmware/arduino/: platformio.ini
firmware/arduino/include/: lv_conf.h  pins.h
firmware/arduino/src/: lv_mem_psram.cpp  main.cpp  sd_cache.cpp  sd_cache.h  secrets.h.example  yoto_api.cpp  yoto_api.h
server/: .env.example  pyproject.toml
server/app/: auth.py  cache.py  config.py  main.py  routes.py  yoto.py
tools/: smoke_test.py
